--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
         <button id="stopBtn" class="btn" disabled><i class="fas fa-pause"></i> Stop</button>
         <button id="continueBtn" class="btn" disabled><i class="fas fa-play"></i> Continue</button>
         <button id="resetBtn" class="btn"><i class="fas fa-redo"></i> Reset</button>
-        <button id="editBtn" class="btn"><i class="fas fa-edit"></i> Edit</button>
         <button id="learnMoreBtn" class="btn"><i class="fas fa-book"></i> Learn About Algorithms</button>
     </div>
     
@@ -173,6 +172,7 @@
    </div>
 
 <!-- Hidden Audio Element for Sound Effect -->
+    <audio id="clickSound" src="GetStarted.mp3" preload="auto"></audio>
     <audio id="hitSound" src="hit.mp3" preload="auto"></audio>
     <audio id="faultSound" src="fault (mp3cut.net).mp3" preload="auto"></audio>
 
